--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-x11proto-randr (1.1.2-1) UNRELEASED; urgency=low
+x11proto-randr (1.1.2-1) experimental; urgency=low
 
   * First upload to Debian
 
