--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+x11proto-randr (1.1.2-3) unstable; urgency=low
+
+  * Upload to unstable
+
+ -- David Nusinow <dnusinow@debian.org>  Thu, 23 Mar 2006 21:36:08 -0500
+
 x11proto-randr (1.1.2-2) experimental; urgency=low
 
   * Add epoch to versioned Pre-Depends on x11-common to make upgrades
