--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
 x11proto-randr (1.1.2-4) UNRELEASED; urgency=low
 
   * Test for obj-$(DEB_BUILD_GNU_TYPE) before creating it during build;
-    idempotency fix. 
+    idempotency fix.
+  * Run dh_install w/ --list-missing. 
 
- -- Andres Salomon <dilinger@debian.org>  Mon, 17 Jul 2006 00:04:58 -0400
+ -- Andres Salomon <dilinger@debian.org>  Mon, 17 Jul 2006 01:23:43 -0400
 
 x11proto-randr (1.1.2-3) unstable; urgency=low
 
