--- a/debian/changelog
+++ b/debian/changelog
@@ -4,9 +4,10 @@ x11proto-randr (1.1.2-4) UNRELEASED; urgency=low
     idempotency fix.
   * Run dh_install w/ --list-missing.
   * Change debhelper build-dep-indep to a normal build-dep, as dh_clean
-    is called inside the clean rule. 
+    is called inside the clean rule.
+  * Drop duplicate x11-common dep in -dev package. 
 
- -- Andres Salomon <dilinger@debian.org>  Thu, 20 Jul 2006 03:59:46 -0400
+ -- Andres Salomon <dilinger@debian.org>  Thu, 20 Jul 2006 04:12:30 -0400
 
 x11proto-randr (1.1.2-3) unstable; urgency=low
 
