--- a/debian/changelog
+++ b/debian/changelog
@@ -5,9 +5,12 @@ x11proto-randr (1.1.2-4) UNRELEASED; urgency=low
   * Run dh_install w/ --list-missing.
   * Change debhelper build-dep-indep to a normal build-dep, as dh_clean
     is called inside the clean rule.
-  * Drop duplicate x11-common dep in -dev package. 
+  * Drop duplicate x11-common dep in -dev package.
+  * Bump standards version to 3.7.2.0.
+  * Version x11-common pre-dep in -dev package to 1:7.0.0 to match
+    the rest of Debian.
 
- -- Andres Salomon <dilinger@debian.org>  Thu, 20 Jul 2006 04:12:30 -0400
+ -- Andres Salomon <dilinger@debian.org>  Thu, 20 Jul 2006 04:34:43 -0400
 
 x11proto-randr (1.1.2-3) unstable; urgency=low
 
