--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+x11proto-randr (1.2.0-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Julien Cristau <julien.cristau@ens-lyon.org>  Tue, 30 Jan 2007 18:12:38 +0100
+
 x11proto-randr (1.1.2-4) unstable; urgency=low
 
   * Test for obj-$(DEB_BUILD_GNU_TYPE) before creating it during build;
