--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 x11proto-randr (1.2.0-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Add XS-Vcs-Git header, and drop obsolete CVS information from
+    debian/control.
 
- -- Julien Cristau <julien.cristau@ens-lyon.org>  Tue, 30 Jan 2007 18:12:38 +0100
+ -- Julien Cristau <julien.cristau@ens-lyon.org>  Tue, 30 Jan 2007 18:29:12 +0100
 
 x11proto-randr (1.1.2-4) unstable; urgency=low
 
