--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ x11proto-randr (1.2.0-1) UNRELEASED; urgency=low
   * New upstream release.
   * Add XS-Vcs-Git header, and drop obsolete CVS information from
     debian/control.
+  * Install the upstream changelog.
 
- -- Julien Cristau <julien.cristau@ens-lyon.org>  Tue, 30 Jan 2007 18:29:12 +0100
+ -- Julien Cristau <julien.cristau@ens-lyon.org>  Tue, 30 Jan 2007 18:37:56 +0100
 
 x11proto-randr (1.1.2-4) unstable; urgency=low
 
