--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,12 @@
-x11proto-randr (1.2.0-1) UNRELEASED; urgency=low
+x11proto-randr (1.2.0-1) experimental; urgency=low
 
   * New upstream release.
   * Add XS-Vcs-Git header, and drop obsolete CVS information from
     debian/control.
   * Install the upstream changelog.
+  * Update debian/copyright.
 
- -- Julien Cristau <julien.cristau@ens-lyon.org>  Tue, 30 Jan 2007 18:37:56 +0100
+ -- Julien Cristau <jcristau@debian.org>  Thu,  8 Feb 2007 20:32:36 +0100
 
 x11proto-randr (1.1.2-4) unstable; urgency=low
 
