--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+x11proto-randr (1.2.1-3) UNRELEASED; urgency=low
+
+  * Update the long description.
+  * Add URL in debian/copyright.
+
+ -- Brice Goglin <bgoglin@debian.org>  Tue, 14 Aug 2007 00:10:59 +0200
+
 x11proto-randr (1.2.1-2) unstable; urgency=low
 
   * Upload to unstable.
