--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-x11proto-randr (1.2.2-1) UNRELEASED; urgency=low
+x11proto-randr (1.2.2-1) unstable; urgency=low
 
   [ Brice Goglin ]
   * Update the long description.
@@ -11,7 +11,7 @@ x11proto-randr (1.2.2-1) UNRELEASED; urgency=low
   * Remove Branden from Uploaders with his permission, and add myself.
   * Drop the XS- prefix from the Vcs-* control fields.
 
- -- Brice Goglin <bgoglin@debian.org>  Tue, 14 Aug 2007 00:10:59 +0200
+ -- Julien Cristau <jcristau@debian.org>  Sun, 13 Jul 2008 13:13:12 +0200
 
 x11proto-randr (1.2.1-2) unstable; urgency=low
 
