--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,141 @@
+commit 3fdbdc2b0a971db7497c6e03e215fd19ec400ce9
+Author: Matthias Hopf <mhopf@suse.de>
+Date:   Fri Dec 12 12:41:21 2008 +0100
+
+    Bump to 1.2.99.3
+
+commit 0c1527d2e89a807e54c549e44798e2cf63fafca2
+Author: Matthias Hopf <mhopf@suse.de>
+Date:   Thu Dec 11 17:15:15 2008 +0100
+
+    Panning tracking areas describe full screen if set to 0.
+
+commit d904495a4cbd66850dc03d32f223aaaf8425f077
+Author: Adam Jackson <ajax@redhat.com>
+Date:   Wed Dec 10 11:15:48 2008 -0500
+
+    Add [GS]etOutputPrimary
+
+commit 1334866b4aa025bce745140aa0f71f6493408ffa
+Merge: ad65017... e719120...
+Author: Keith Packard <keithp@keithp.com>
+Date:   Tue Dec 9 20:59:47 2008 -0800
+
+    Merge commit 'origin/master'
+
+commit e71912062f3985dd2f4d7b37e415b4a614b51d9b
+Author: Matthias Hopf <mhopf@suse.de>
+Date:   Mon Dec 8 14:40:07 2008 +0100
+
+    Add unicode art pictures for panning.
+
+commit 19a851fc85192906586138c5b17740ba28328eaa
+Author: Matthias Hopf <mhopf@suse.de>
+Date:   Thu Dec 4 15:45:23 2008 +0100
+
+    Bump to 1.2.99.2
+
+commit fb1f243716282f442235323834fec50aab7fe2f7
+Author: Matthias Hopf <mhopf@suse.de>
+Date:   Thu Dec 4 15:44:12 2008 +0100
+
+    Nuke config-timestamp for panning. Specifying panning update on screen size change.
+
+commit 425468e9a29071823316bfc027bc80eb20acc61e
+Author: Matthias Hopf <mhopf@suse.de>
+Date:   Thu Dec 4 12:57:33 2008 +0100
+
+    Add panning to versioning information.
+
+commit 419a0f20746d9f3e8962ea3294568343d9877b2c
+Author: Matthias Hopf <mhopf@suse.de>
+Date:   Fri Nov 28 18:30:22 2008 +0100
+
+    Panning protocol bits description
+
+commit 6b5d4ce8943c1d39392a0536d426fe27a9161b04
+Author: Matthias Hopf <mhopf@suse.de>
+Date:   Fri Nov 28 18:29:19 2008 +0100
+
+    Panning protocol description
+
+commit abe956221670598a5fd0f77107a3471c2fcf84df
+Author: Matthias Hopf <mhopf@suse.de>
+Date:   Fri Nov 28 17:22:23 2008 +0100
+
+    Panning protocol extension
+
+commit 546906dbe29816adaa6a35277266d79fbe131d0c
+Author: Adam Jackson <ajax@redhat.com>
+Date:   Wed Dec 3 13:36:00 2008 -0500
+
+    Indent CRTC transform docs to match the rest of the requests.
+
+commit 5d5e4cff8c69d36d10e682d59c9a9005a8b5ad18
+Author: Adam Jackson <ajax@redhat.com>
+Date:   Wed Dec 3 12:02:18 2008 -0500
+
+    More doc for CRTC transforms
+
+commit ad6501790bbaff528cf247df24ddb7de27576a11
+Author: Keith Packard <keithp@keithp.com>
+Date:   Wed Nov 26 15:47:18 2008 -0800
+
+    Remove duplicate GetScreenResourcesCurrent declarations
+    
+    Signed-off-by: Keith Packard <keithp@keithp.com>
+
+commit 10bff0be50cf5cf314960bb85c472f1c63d37755
+Author: Keith Packard <keithp@keithp.com>
+Date:   Wed Nov 26 09:24:36 2008 -0800
+
+    Update to version 1.2.99.1
+
+commit 6c17940a7960885695aa6033de58c3cd2bb6fb79
+Merge: c998b46... 8793429...
+Author: Keith Packard <keithp@keithp.com>
+Date:   Mon Nov 24 16:22:11 2008 -0800
+
+    Merge branch 'transform-proposal'
+    
+    Conflicts:
+    
+    	randr.h
+    	randrproto.h
+    	randrproto.txt
+
+commit 8793429f3d9d7cdf16be118ce05a68af6531568e
+Author: Keith Packard <keithp@keithp.com>
+Date:   Mon Nov 24 16:01:55 2008 -0800
+
+    Describe projective transform additions in Introduction
+    
+    Signed-off-by: Keith Packard <keithp@keithp.com>
+
+commit c998b4658d735e5b2d7aa6983d732d40cc802823
+Author: Adam Jackson <ajax@redhat.com>
+Date:   Mon Nov 24 16:29:58 2008 -0500
+
+    GSRC added in 1.3, not 1.2
+
+commit 0d334c880396b9ef67ed899ad228cc693aad6a28
+Author: Adam Jackson <ajax@redhat.com>
+Date:   Mon Nov 24 16:19:43 2008 -0500
+
+    Fix RRNumberRequests
+
+commit 2c0635eed5ae418ca278d99e044f583d54273097
+Author: Adam Jackson <ajax@redhat.com>
+Date:   Mon Nov 24 15:54:09 2008 -0500
+
+    Add GetScreenResourcesCurrent
+
+commit 4a960ba3db3c3f8bdf3d519d263f910b6107b9ff
+Author: Julien Cristau <jcristau@debian.org>
+Date:   Fri Jul 11 17:12:22 2008 +0200
+
+    spec: add missing list of clones to RRGetOutputInfo reply
+
 commit 2be5a52d5f6bdd2aa70efcb06bd99a149c6db6ba
 Author: Adam Jackson <ajax@redhat.com>
 Date:   Wed Jul 2 15:34:31 2008 -0400
@@ -11,6 +149,29 @@ Date:   Mon Jun 23 14:52:12 2008 -0400
     Bug #16149: Make the field not be named 'delete' in C++ mode.
     
     Thanks for the upward compatibility, Bjarne.
+
+commit 2d09f9cac379c74f492b528a8aa2ac3b5997d617
+Author: Keith Packard <keithp@keithp.com>
+Date:   Tue Mar 18 16:01:10 2008 -0700
+
+    Eliminate inverse matrix from randr transform protocol
+    
+    It is easier, and potentially more precise, to compute the inverse in the
+    server where everything can eventually be kept in floating point form.
+
+commit aa5cd18a9f84aa075ffa7f70e6591b70b093119f
+Author: Keith Packard <keithp@keithp.com>
+Date:   Sat Mar 15 00:32:35 2008 -0700
+
+    Add filters to CRTC transforms.
+    
+    This allows scaling transforms to use bilinear filtering if desired.
+
+commit 329b2068c1505dbc2eef7cc245b02c3bbf9c67ff
+Author: Keith Packard <keithp@keithp.com>
+Date:   Fri Feb 15 15:49:35 2008 -0800
+
+    Add Transform request proposal for 1.3
 
 commit 2df8499d24d15bfca3c928b681f64b6e8a05f0af
 Author: James Cloos <cloos@jhcloos.com>
