--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-x11proto-randr (1.2.99.3-1) UNRELEASED; urgency=low
+x11proto-randr (1.2.99.3-1) experimental; urgency=low
 
   [ Timo Aaltonen ]
   * New upstream prerelease.
@@ -8,7 +8,7 @@ x11proto-randr (1.2.99.3-1) UNRELEASED; urgency=low
   * debian/rules cleanup: we don't build anything, so no need to set CFLAGS
     and DEB_{HOST,BUILD}_*.
 
- -- Timo Aaltonen <tepsipakki@ubuntu.com>  Wed, 03 Dec 2008 11:45:43 +0200
+ -- Julien Cristau <jcristau@debian.org>  Sun, 04 Jan 2009 20:15:27 +0100
 
 x11proto-randr (1.2.2-1) unstable; urgency=low
 
