--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+x11proto-randr (1.3.0-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Julien Cristau <jcristau@debian.org>  Thu, 12 Mar 2009 16:30:50 +0100
+
 x11proto-randr (1.2.99.3-2) unstable; urgency=low
 
   * Upload to unstable.
