--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 x11proto-randr (1.3.0-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Add missing build-dep on xutils-dev.
 
  -- Julien Cristau <jcristau@debian.org>  Thu, 12 Mar 2009 16:30:50 +0100
 
