--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+x11proto-randr (1.3.0-2) UNRELEASED; urgency=low
+
+  * Add README.source from xsfbs. Bump Standards-Version to 3.8.1.
+
+ -- Timo Aaltonen <tjaalton@ubuntu.com>  Fri, 31 Jul 2009 14:40:24 +0300
+
 x11proto-randr (1.3.0-1) unstable; urgency=low
 
   * New upstream release.
