--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 x11proto-randr (1.3.0-2) UNRELEASED; urgency=low
 
   * Add README.source from xsfbs. Bump Standards-Version to 3.8.1.
+  * Bump Standards-Version to 3.8.3.
 
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Fri, 31 Jul 2009 14:40:24 +0300
 
