--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-x11proto-randr (1.3.0-2) UNRELEASED; urgency=low
+x11proto-randr (1.3.1-1) UNRELEASED; urgency=low
 
+  * New upstream release.
   * Add README.source from xsfbs. Bump Standards-Version to 3.8.1.
   * Bump Standards-Version to 3.8.3.
   * Drop Conflicts/Replaces on libxrandr-dev and Pre-Depends on x11-common.
