--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,80 @@
+commit 8289b93b9a21809c3ea88637c6dfad09849f46b5
+Author: Keith Packard <keithp@keithp.com>
+Date:   Mon Oct 5 20:50:22 2009 -0700
+
+    New properties claimed to be in version 1.4 instead of 1.3.1
+    
+    Signed-off-by: Keith Packard <keithp@keithp.com>
+
+commit 240bb6051dccd072c95c8569a62b1222213ef396
+Author: Keith Packard <keithp@keithp.com>
+Date:   Mon Oct 5 20:04:11 2009 -0700
+
+    Bump version to 1.3.1
+    
+    Signed-off-by: Keith Packard <keithp@keithp.com>
+
+commit e5ea87cd2a1c7b636d95f42daf3f36ba3104d59d
+Author: Keith Packard <keithp@keithp.com>
+Date:   Mon Oct 5 20:20:14 2009 -0700
+
+    Add XORG_DEFAULT_OPTIONS invocation in configure.ac
+    
+    This should be included in all xorg configure.ac files to provide a
+    hook for setting various default values.
+    
+    Signed-off-by: Keith Packard <keithp@keithp.com>
+
+commit d9ee6abdef13d04f6e7015c0cc39e3855aa01bbf
+Author: Keith Packard <keithp@keithp.com>
+Date:   Fri Jun 5 20:37:24 2009 -0700
+
+    Remove trailing white space from randrproto.txt
+
+commit 92789c6c3a78bb64e391f1deec1d613900604985
+Author: Keith Packard <keithp@keithp.com>
+Date:   Fri Jun 5 20:35:46 2009 -0700
+
+    Allow inactive outputs to be set as primary
+
+commit 993dbda7b42caed7480dcff0eca4f9af9c1163ba
+Author: Matthias Hopf <mhopf@suse.de>
+Date:   Tue Aug 18 12:08:25 2009 +0200
+
+    Add Backlight property description.
+
+commit 77c7ab02bf62f057c32f666168fd0ceb03a85a2d
+Author: Matthias Hopf <mhopf@suse.de>
+Date:   Tue Aug 18 12:00:10 2009 +0200
+
+    Should read "EDID", not "EdidData" (2).
+    
+    Also include reference to former name.
+
+commit 5c95df133062570fe134be002dcb167ac059203d
+Author: Matthias Hopf <mhopf@suse.de>
+Date:   Tue Aug 18 11:56:38 2009 +0200
+
+    Sort properties alphabetically.
+
+commit 27529caf7912094bc83b47b8251205029c35d52c
+Author: Adam Jackson <ajax@redhat.com>
+Date:   Wed Apr 1 11:48:26 2009 -0400
+
+    Update reference to renderproto.txt
+
+commit 8ae7f1d202279959fdad84d30054b52ef021a9cc
+Author: Adam Jackson <ajax@redhat.com>
+Date:   Wed Apr 1 11:47:52 2009 -0400
+
+    Clarify that GetOutputPrimary is per-screen.
+
+commit 4036cdcc064db952286a74d679147d280b1a5f1f
+Author: Adam Jackson <ajax@redhat.com>
+Date:   Wed Apr 1 11:47:03 2009 -0400
+
+    Punctuation fix.
+
 commit 94e22fecc66590f81ca280517505c721a5f54497
 Author: Matthias Hopf <mhopf@suse.de>
 Date:   Fri Mar 6 15:03:09 2009 +0100
