--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ x11proto-randr (1.3.1-1) UNRELEASED; urgency=low
   * Bump Standards-Version to 3.8.3.
   * Drop Conflicts/Replaces on libxrandr-dev and Pre-Depends on x11-common.
     This was needed for upgrades from sarge.
+  * Bump the build-dep on xutils-dev (>= 1:7.5~1).
 
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Fri, 31 Jul 2009 14:40:24 +0300
 
