--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-x11proto-randr (1.3.1-1) UNRELEASED; urgency=low
+x11proto-randr (1.3.1-1) unstable; urgency=low
 
+  [ Timo Aaltonen ]
   * New upstream release.
   * Add README.source from xsfbs. Bump Standards-Version to 3.8.1.
   * Bump Standards-Version to 3.8.3.
@@ -7,7 +8,7 @@ x11proto-randr (1.3.1-1) UNRELEASED; urgency=low
     This was needed for upgrades from sarge.
   * Bump the build-dep on xutils-dev (>= 1:7.5~1).
 
- -- Timo Aaltonen <tjaalton@ubuntu.com>  Fri, 31 Jul 2009 14:40:24 +0300
+ -- Julien Cristau <jcristau@debian.org>  Sat, 21 Nov 2009 13:38:48 +0100
 
 x11proto-randr (1.3.0-1) unstable; urgency=low
 
