--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+x11proto-randr (1.3.1-2) UNRELEASED; urgency=low
+
+  * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
+    good reason.  Thanks, Colin Watson!
+
+ -- Julien Cristau <jcristau@debian.org>  Sat, 16 Jan 2010 16:47:46 +0000
+
 x11proto-randr (1.3.1-1) unstable; urgency=low
 
   [ Timo Aaltonen ]
