--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-x11proto-randr (1.3.1-2) UNRELEASED; urgency=low
+x11proto-randr (1.3.2-1) UNRELEASED; urgency=low
 
+  [ Julien Cristau ]
   * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
     good reason.  Thanks, Colin Watson!
   * Remove myself from Uploaders
 
- -- Julien Cristau <jcristau@debian.org>  Sat, 16 Jan 2010 16:47:46 +0000
+  [ Robert Hooker ]
+  * New upstream release.
+
+ -- Robert Hooker <sarvatt@ubuntu.com>  Tue, 02 Nov 2010 19:29:01 -0400
 
 x11proto-randr (1.3.1-1) unstable; urgency=low
 
