--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ x11proto-randr (1.3.2-1) UNRELEASED; urgency=low
   [ Robert Hooker ]
   * New upstream release.
 
+  [ Cyril Brulebois ]
+  * Use .install rather than dh_installdocs for the txt documentation.
+
  -- Robert Hooker <sarvatt@ubuntu.com>  Tue, 02 Nov 2010 19:29:01 -0400
 
 x11proto-randr (1.3.1-1) unstable; urgency=low
