--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ x11proto-randr (1.3.2-1) UNRELEASED; urgency=low
   * Use .install rather than dh_installdocs for the txt documentation.
   * Switch from --list-missing to --fail-missing for additional safety.
   * No longer pass --disable-shared, this option is gone.
+  * Add myself to Uploaders.
 
  -- Robert Hooker <sarvatt@ubuntu.com>  Tue, 02 Nov 2010 19:29:01 -0400
 
