--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-x11proto-randr (1.3.2-1) UNRELEASED; urgency=low
+x11proto-randr (1.3.2-1) unstable; urgency=low
 
   [ Julien Cristau ]
   * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
@@ -14,7 +14,7 @@ x11proto-randr (1.3.2-1) UNRELEASED; urgency=low
   * No longer pass --disable-shared, this option is gone.
   * Add myself to Uploaders.
 
- -- Robert Hooker <sarvatt@ubuntu.com>  Tue, 02 Nov 2010 19:29:01 -0400
+ -- Cyril Brulebois <kibi@debian.org>  Wed, 03 Nov 2010 01:50:40 +0100
 
 x11proto-randr (1.3.1-1) unstable; urgency=low
 
