--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+x11proto-randr (1.3.99.1) UNRELEASED; urgency=low
+
+  * New git snapshot.
+
+ -- Julien Cristau <jcristau@debian.org>  Mon, 03 Jan 2011 20:17:46 +0100
+
 x11proto-randr (1.3.2-1) unstable; urgency=low
 
   [ Julien Cristau ]
