--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-x11proto-randr (1.3.99.1-1) UNRELEASED; urgency=low
+x11proto-randr (1.3.99.1-1) experimental; urgency=low
 
   * New git snapshot.
   * Remove Andres Salomon and David Nusinow from Uploaders.  Thanks for your
@@ -6,7 +6,7 @@ x11proto-randr (1.3.99.1-1) UNRELEASED; urgency=low
   * debian/rules: stop using touch for stampfiles, random whitespace cleanup.
   * Bump Standards-Version to 3.9.1.
 
- -- Julien Cristau <jcristau@debian.org>  Mon, 03 Jan 2011 20:17:46 +0100
+ -- Julien Cristau <jcristau@debian.org>  Mon, 14 Feb 2011 16:34:33 +0100
 
 x11proto-randr (1.3.2-1) unstable; urgency=low
 
