--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+x11proto-randr (1.3.2-2) UNRELEASED; urgency=low
+
+  * Mark x11proto-randr-dev Multi-Arch: foreign.
+
+ -- Steve Langasek <vorlon@debian.org>  Sat, 02 Jul 2011 01:16:38 +0100
+
 x11proto-randr (1.3.2-1) unstable; urgency=low
 
   [ Julien Cristau ]
