--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 x11proto-randr (1.3.2-2) UNRELEASED; urgency=low
 
   * Mark x11proto-randr-dev Multi-Arch: foreign.
+  * Install .pc file to /usr/share/pkgconfig instead of
+    /usr/lib/pkgconfig
 
  -- Steve Langasek <vorlon@debian.org>  Sat, 02 Jul 2011 01:16:38 +0100
 
