Upload to experimental

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-x11proto-randr (1.4.0-1) UNRELEASED; urgency=low
+x11proto-randr (1.4.0-1) experimental; urgency=low
 
   [ Maarten Lankhorst ]
   * New upstream release.
@@ -6,7 +6,7 @@ x11proto-randr (1.4.0-1) UNRELEASED; urgency=low
   [ Julien Cristau ]
   * Add Red Hat copyright notice to debian/copyright.
 
- -- Maarten Lankhorst <maarten.lankhorst@canonical.com>  Thu, 12 Jul 2012 15:25:04 +0200
+ -- Julien Cristau <jcristau@debian.org>  Sat, 14 Jul 2012 15:30:02 +0200
 
 x11proto-randr (1.3.99.1-1) experimental; urgency=low
 
