--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+x11proto-randr (1.4.0-2~bpo70+1) wheezy-backports; urgency=low
+
+  * Rebuild for wheezy-backports.
+
+ -- Alexey Bondarchuk <alexey.bondarchuk@aleax.me>  Sun, 28 Apr 2013 13:57:50 +0300
+
 x11proto-randr (1.4.0-2) UNRELEASED; urgency=low
 
   * debian/rules: clean doesn't need dh_testroot.
